syntax = "proto3";

package pb.family.todos;

import "google/api/annotations.proto";

option go_package = "github.com/taeho-io/family/idl/generated/go/pb/family/todos;todos";

service TodosService {
    rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse) {
        option (google.api.http) = {
            post: "/v1/todo-groups/{todo_group_id}/todos"
            body: "*"
        };
    }
    rpc UpdateTodo (UpdateTodoRequest) returns (UpdateTodoResponse) {
        option (google.api.http) = {
            put: "/v1/todo-groups/{todo_group_id}/todos/{todo_id}"
            body: "*"
        };
    }
    rpc DeleteTodo (DeleteTodoRequest) returns (DeleteTodoResponse) {
        option (google.api.http) = {
            delete: "/v1/todo-groups/{todo_group_id}/todos/{todo_id}"
        };
    }
}

enum Status {
    TODO = 0;
    DONE = 1;
    PENDING = 2;
}

enum Priority {
    NONE = 0;
    LOW = 10;
    MEDIUM = 30;
    HIGH = 50;
    URGENT = 100;
}

message Todo {
    string todo_id = 1;
    string todo_group_id = 2;
    string title = 3;
    string description = 4;
    Status status = 5;
    string order = 6;
    int64 created_at = 7;
    int64 updated_at = 8;
    int64 done_at = 9;
    int64 due_at = 10;
    Priority priority = 11;
}

message CreateTodoRequest {
    string account_id = 1;
    string todo_group_id = 2;
    string todo_id = 3;
    Todo todo = 4;
}

message CreateTodoResponse {
    Todo todo = 1;
}

message UpdateTodoRequest {
    string account_id = 1;
    string todo_group_id = 2;
    string todo_id = 3;
    Todo todo = 4;
}

message UpdateTodoResponse {
    Todo todo = 1;
}

message DeleteTodoRequest {
    string account_id = 1;
    string todo_group_id = 2;
    string todo_id = 3;
}

message DeleteTodoResponse {
}
